mongos crashes due to client disconnecting when signing keys being refreshed

XMLWordPrintableJSON

    • Fully Compatible
    • v4.4, v4.2
    • Sharding 2020-05-04, Sharding 2020-05-18
    • None
    • 3
    • None
    • None
    • None
    • None
    • None
    • None

      Issue Status as of May 1st, 2020

       ISSUE SUMMARY
      When constructing a command response, mongos may need to refresh its set of signing keys if the key for the cluster time isn’t currently known. If the client disconnects before this refresh, the resulting error is not properly handled and causes mongos to crash.

      USER IMPACT
      mongos will crash with a message saying “operation was interrupted because a client disconnected. terminate() called.”

      AFFECTED VERSIONS
      This affects 4.2.6 and earlier versions of 4.2.

      FIXED VERSIONS
      The fix will be included in 4.4.0 and 4.2.7.

      Original Summary

      Unexpected Shutdown mongos version v4.2.0

      Original Description 

      Hello,

      I'm facing a problem in a PROD server. 3 Mongos nodes was unexpectedly shutdown.
      This is a message in the log file when the node down.

      "[conn132492] operation was interrupted because a client disconnected
       [conn132492] terminate() called. No exception is active 0x5620c0615da1 0x5620c0615b58 0x5620c0720386 0x5620c07203c1 0x5620bf8a29ad 0x5620bfb1c5f9 0x5620bfb1cb72 0x5620bfa41f28 0x5620bfa6540c 0x5620bfa5f80f 0x5620bfa62a8c 0x5620bfdca2f2 0x5620bfa5d22d 0x5620bfa604c3 0x5620bfa5e8f7 0x5620bfa5f76b 0x5620bfa62a8c 0x5620bfdca75b 0x5620c04bcc64 0x7f4a7735cdd5 0x7f4a77085ead"

       

      How do I know the root cause of this issue?
      Could anyone help and suggest?

        1. BACKTRACE
          1.32 MB
        2. log.zip
          498 kB
        3. SERVER-47553_repro.diff
          2 kB

            Assignee:
            Gregory Noma
            Reporter:
            Alice classy
            Votes:
            0 Vote for this issue
            Watchers:
            20 Start watching this issue

              Created:
              Updated:
              Resolved: