SERVER-47553 Prevent appendRequiredFieldsToResponse() from throwing inside noexcept block